force-app/main/default/objects/Expense_Validation_Exception__c/Expense_Validation_Exception__c.object-meta.xml
<CustomObject>
    <description>Records flagged exceptions detected by the Smart Expense Control engine for human review.</description>
    <label>Expense Validation Exception</label>
    <nameField>
        <displayFormat>EXC-{00000}</displayFormat>
        <label>Exception Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Validation Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>