force-app/main/default/objects/Expense_Validation_Exception__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <description>Final decision applied to this exception.</description>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approved With Justification</fullName><default>false</default><label>Approved With Justification</label></value>
            <value><fullName>Amount Adjusted</fullName><default>false</default><label>Amount Adjusted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Overridden by Manager</fullName><default>false</default><label>Overridden by Manager</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>