force-app/main/default/objects/Expense_Validation_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Category of policy exception or anomaly.</description>
    <label>Exception Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Policy Limit Exceeded</fullName><default>false</default><label>Policy Limit Exceeded</label></value>
            <value><fullName>Missing Receipt</fullName><default>false</default><label>Missing Receipt</label></value>
            <value><fullName>Potential Duplicate</fullName><default>false</default><label>Potential Duplicate</label></value>
            <value><fullName>Budget Overrun</fullName><default>false</default><label>Budget Overrun</label></value>
            <value><fullName>Amount Mismatch</fullName><default>false</default><label>Amount Mismatch</label></value>
            <value><fullName>Human Review Required</fullName><default>true</default><label>Human Review Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>