force-app/main/default/objects/Expense_Validation_Exception__c/fields/Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expense item that generated the exception.</description>
    <label>Expense Item</label>
    <referenceTo>Expense_Item__c</referenceTo>
    <relationshipLabel>Validation Exceptions</relationshipLabel>
    <relationshipName>Validation_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>