force-app/main/default/objects/Expense_Validation_Exception__c/fields/Expense_Report__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expense report containing this exception.</description>
    <label>Expense Report</label>
    <referenceTo>Expense_Report__c</referenceTo>
    <relationshipLabel>Validation Exceptions</relationshipLabel>
    <relationshipName>Validation_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>