force-app/main/default/objects/Expense_Validation_Exception__c/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <description>Auditable comments left by the reviewer upon resolution.</description>
    <label>Resolution Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>