force-app/main/default/objects/Expense_Validation_Exception__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Timestamp when exception was reviewed.</description>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>