force-app/main/default/objects/Expense_Validation_Exception__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager or finance user who reviewed this exception.</description>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>