force-app/main/default/objects/Expense_Validation_Exception__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Risk severity of the exception.</description>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>