force-app/main/default/objects/Expense_Validation_Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Workflow state of exception resolution.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Resolved - Approved</fullName><default>false</default><label>Resolved - Approved</label></value>
            <value><fullName>Resolved - Overridden</fullName><default>false</default><label>Resolved - Overridden</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Clarification Requested</fullName><default>false</default><label>Clarification Requested</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>