force-app/main/default/objects/Expense_Validation_Exception__c/fields/Travel_Request__c.field-meta.xml
<CustomField>
    <fullName>Travel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Travel request associated with this exception.</description>
    <label>Travel Request</label>
    <referenceTo>Travel_Request__c</referenceTo>
    <relationshipLabel>Validation Exceptions</relationshipLabel>
    <relationshipName>Validation_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>